# tune

./: .env  .env.example  .gitignore  Dockerfile  README.MD  README.md  app.py  article1.md  aura.py  auramind_faiss.index  auramind_local.db  cache_datasets.py  comic_relief.txt  convert.py  convert_model.py  convert_to_onnx.py  convert_to_tflite.py  convert_with_generative_api.py  convert_with_mediapipe.py  create_index.py  create_metadata.py  create_zip.py  database.py  debug_export.py  documents.npy  download_model.py  evaluate.py  healthy_maize_remedy.txt  ingest_document.py  inspect_config.py  main.py  maize_phosphorus_deficiency_remedy.txt  mcp_client.py  model_list.txt  prepare_dataset.py  process_video.py  pyproject.toml  recommendations.json  run_inference.py  run_sweep.py  (+6 more)
Notebooks/: augment-dataset.ipynb  auramind-deployment-lab-part-1.ipynb  auramind-deployment-lab-part-2.ipynb  convert-e2b-to-onnx.ipynb  corrections.ipynb  maize-training-5-sweeps-and-eval.ipynb  maize-training.ipynb  maize_training_2GPU.ipynb  maize_training_5_sweeps.ipynb  multi_gpu_corrections.ipynb  orpheus-3b-pidgin-cpt.ipynb  pidgin-cpt-dataset.ipynb  pidgin-training.ipynb  spark-0-5b-pidgin-cpt.ipynb
agents/: README.md  aura_mind_agent.py
audio_dataset/: metadata.csv
aura_mind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: article1.md  article2.md  article3.md  article4.md
miscelleneous/: [gemma_3n]matformer_lab.py  app1.py  check_models.py  convert_multimodal_to_onnx.py  convert_to_onnx.py  convert_to_tflite.py  convert_with_aiedge.py  create_zip.py  download_finetuned_model.py  for_text_task.py  inspection_output.py  r_s.py
multi-gpu-sweep-and-eval/: cache_datasets.py  cleanup.py  evaluate.py  run_sweep.py  sweep_config.py  train.py
src/aura_mind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/aura_mind_adk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: index.html
sweepy/: README.md  adapter_config.json  preprocessor_config.json  processor_config.json  special_tokens_map.json  tokenizer_config.json
tools/: diagnosis_tool.py  tts_tool.py
tts_service/: README.MD  requirements.txt  run_tts_service.py
(+2 files in other folders)
