[project]
name = "aura-mind-adk"
version = "0.1.0"
description = "An ADK-based agent for Aura-Mind."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "google-adk>=1.6.0",
    "python-dotenv>=1.0.1",
    "gradio_client>=0.16.1",
    "websockets>=12.0",
]